--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id("xyz.jpenilla.run-paper") version "2.3.1"
+    id("com.gradleup.shadow") version "8.3.7"
 }
 
 group = 'io.github.p3sto'
@@ -8,52 +8,44 @@ version = '0.0.1'
 
 repositories {
     mavenCentral()
-    maven {
-        name = "papermc-repo"
-        url = "https://repo.papermc.io/repository/maven-public/"
-    }
-    maven {
-        name = "sonatype"
-        url = "https://oss.sonatype.org/content/groups/public/"
-    }
+    maven { url = "https://repo.papermc.io/repository/maven-public/" }
+    maven { url = "https://oss.sonatype.org/content/groups/public/" }
+    maven { url = "https://repo.glaremasters.me/repository/towny/" }
+    maven { url = "https://jitpack.io/" }
 }
 
 dependencies {
-    compileOnly("io.papermc.paper:paper-api:1.21.6-R0.1-SNAPSHOT")
+    compileOnly 'io.papermc.paper:paper-api:1.21.6-R0.1-SNAPSHOT'
+    compileOnly 'com.github.TownyAdvanced:TownyChat:0.119'
+    compileOnly 'com.palmergames.bukkit.towny:towny:0.101.1.0'
+
+    implementation 'io.lettuce:lettuce-core:6.7.0.RELEASE'
+    implementation 'dev.dejvokep:boosted-yaml:1.3.7'
+    implementation 'com.github.Revxrsal.Lamp:common:3.2.1'
+    implementation 'com.github.Revxrsal.Lamp:bukkit:3.2.1'
+    implementation 'io.github.revxrsal:lamp.common:4.0.0-beta.25'
+    implementation 'io.github.revxrsal:lamp.bukkit:4.0.0-beta.25'
+    implementation 'io.github.revxrsal:lamp.brigadier:4.0.0-beta.25'
 }
 
-tasks {
-  runServer {
-    // Configure the Minecraft version for our task.
-    // This is the only required configuration besides applying the plugin.
-    // Your plugin's jar (or shadowJar if present) will be used automatically.
-    minecraftVersion("1.21")
-  }
-}
-
-def targetJavaVersion = 21
 java {
-    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    sourceCompatibility = javaVersion
-    targetCompatibility = javaVersion
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
-    }
+    def javaVersion = JavaVersion.toVersion(21)
+    sourceCompatibility = targetCompatibility = javaVersion
+    toolchain.languageVersion = JavaLanguageVersion.of(21)
 }
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
-
-    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        options.release.set(targetJavaVersion)
-    }
+    options.release.set(21)
 }
 
-processResources {
-    def props = [version: version]
-    inputs.properties props
-    filteringCharset 'UTF-8'
-    filesMatching('plugin.yml') {
-        expand props
+shadowJar {
+    archiveClassifier = ""
+    // minimize() // Uncomment for release builds
+}
+
+build {
+    dependsOn {
+        shadowJar
     }
 }
